--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -389,12 +389,12 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 }
 
 .themeDefault-24hCdX,
-#bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch {
+.bd-switch {
     background-color: rgba(0, 0, 0, 0.25);
 }
 
 .themeDefault-24hCdX.valueChecked-m-4IJZ,
-#bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch.checked {
+.bd-switch-checked {
     background-color: #008c99;
 }
 
@@ -1680,8 +1680,31 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     border-radius: 14px;
 }
 
+.secondary-dIudih,
+.tertiary-aMXF0g {
+    background-color: #008c99 !important;
+    color: white;
+}
+
+.messageContainer-gbhlwo {
+    background-color: rgba(0, 0, 0, .53);
+}
+  
+.message-2DieIs {
+    overflow: visible;
+}
+  
+.messageContainer-gbhlwo .avatar-1BDn8e {
+    top: -1px;
+}
+
+.channelHeader-3Gd2xq {
+    background-color: rgba(0, 0, 0, .33);
+}
+
 .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, 
-.topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ {
+.topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ,
+.theme-dark .header-2-Imhb .tabBar-1kuXvJ .tab-ck0077.active-1MbGPa {
     background-color: rgba(0, 140, 153, 0.57);
     border: 2px solid #28818c; /* 2nd Color of Monochromatic Colors */
 }
