--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -118,24 +118,24 @@
   color: white;
 }
 
-.themeDefault-24hCdX, .themeDefault-24hCdX.valueChecked-m-4IJZ, #bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch,
-#bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch.checked {
+.themeDefault-24hCdX, .themeDefault-24hCdX.valueChecked-m-4IJZ, .bd-switch,
+.bd-switch-checked {
   background-color: rgba(0, 0, 0, .56);
 }
 
 
-.themeDefault-24hCdX.sizeDefault-2YlOZr:after, #bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch:before {
+.themeDefault-24hCdX.sizeDefault-2YlOZr:after, .bd-switch::after {
   background-color: #805d4c;
 }
 
-.valueChecked-m-4IJZ.sizeDefault-2YlOZr:after, #bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch.checked:before {
+.valueChecked-m-4IJZ.sizeDefault-2YlOZr:after, .bd-switch-checked:before {
   background-color: #946f5e;
 }
 
 .sizeDefault-2YlOZr,
 .sizeDefault-2YlOZr:after, .sizeMini-1ii40f,
-#bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch:before,
-#bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch {
+.bd-switch::after,
+.bd-switch {
   border-radius: 5px;
 }
 
@@ -202,8 +202,30 @@
 }
 
 .side-8zPYf6 .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ, .topPill-30KHOu .themed-OHr7kt.selected-3s45Ha.item-PXvHYJ,
-.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected {
+.theme-dark #bd-settings-sidebar .ui-tab-bar-item.selected, .theme-dark .header-2-Imhb .tabBar-1kuXvJ .tab-ck0077.active-1MbGPa {
   background-color: #805d4c;
+}
+
+.secondary-dIudih,
+.tertiary-aMXF0g {
+  background-color: #805d4c !important;
+  color: white;
+}
+
+.messageContainer-gbhlwo {
+  background-color: rgba(0, 0, 0, .53);
+}
+
+.message-2DieIs {
+  overflow: visible;
+}
+
+.messageContainer-gbhlwo .avatar-1BDn8e {
+  top: -1px;
+}
+
+.channelHeader-3Gd2xq {
+  background-color: rgba(0, 0, 0, .33);
 }
 
 .themeDefault-24hCdX.valueChecked-m-4IJZ[style*="background-color: rgb(67, 181, 129);"] {
