A lot of changes and new things

--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -1461,7 +1461,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 
 .theme-dark .mentioned-xhSam7,
 .message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z, 
-.mouse-mode .mentioned-xhSam7:hover {
+.mouse-mode.full-motion .mentioned-xhSam7:hover {
     background: rgba(0, 140, 153, 0.276);
     border: 2px solid rgba(0, 140, 153, 0.146);
     padding: 14px;
