--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -2680,7 +2680,7 @@
 	.message-2qnXI6.selected-2P5D_Z, 
 	.mouse-mode .message-2qnXI6:hover,
 	.message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z, 
-	.mouse-mode .mentioned-xhSam7:hover {
+	.mouse-mode.full-motion .mentioned-xhSam7:hover {
 		background-color: transparent;
 	}
   
