--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -1284,7 +1284,7 @@
 
 .theme-dark .mentioned-xhSam7,
 .message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z, 
-.mouse-mode .mentioned-xhSam7:hover {
+.mouse-mode.full-motion .mentioned-xhSam7:hover {
   background: rgba(202,158,115, 0.3);
   border: 2px solid rgba(202,158,115, 0.5);
 }
