--- a/My_Theme_Collection/Kemono_Friends.theme.css
+++ b/My_Theme_Collection/Kemono_Friends.theme.css
@@ -1471,7 +1471,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 
 .theme-dark .mentioned-xhSam7,
 .message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z, 
-.mouse-mode .mentioned-xhSam7:hover {
+.mouse-mode.full-motion .mentioned-xhSam7:hover {
     background: rgba(114, 142, 61, 0.276);
     border: 2px solid rgba(114, 142, 61, 0.146);
     padding: 14px;
