--- a/My_Theme_Collection/AkameNoKill.theme.css
+++ b/My_Theme_Collection/AkameNoKill.theme.css
@@ -759,7 +759,7 @@
   padding-bottom: 12px;
 }
 
-.message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z, .mouse-mode .mentioned-xhSam7:hover {
+.message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z, .mouse-mode.full-motion .mentioned-xhSam7:hover {
   background-color: rgba(155, 39, 66, .5);
   transition: background-color .3s ease;
 }
