--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -1993,7 +1993,7 @@
 
 .theme-dark .mentioned-xhSam7,
 .message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z, 
-.mouse-mode .mentioned-xhSam7:hover {
+.mouse-mode.full-motion .mentioned-xhSam7:hover {
     background: rgba(244, 172, 197, 0.42);
     border: 2px solid #f4acc5;
 }
