--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -1534,10 +1534,7 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 
 /* Emotes Code */
 
-#bda-qem-favourite-container .scroller::-webkit-scrollbar, #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, #bda-qem-twitch-container .scroller::-webkit-scrollbar, #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
-    background-color: transparent!important;
-    border-color: transparent!important;
-}
+
 
 .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, 
 .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb,
@@ -1548,72 +1545,63 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background-color: #008c99;
 }
 
-#bda-qem-favourite-container, 
-#bda-qem-twitch-container,
-.emojiPicker-3m1S-j {
+
+.contentWrapper-2txmjs {
     background: linear-gradient(45deg, #008c99 0%, #212121 67%);
 }
 
-.infoBar-U6oBFk {
+.inspector-sdLnLS {
     background: none;
 }
 
-.infoBar-U6oBFk {
-    background: none;
-}
 
-#bda-qem {
-    border-bottom: none!important;
-    background: none;
-}
 
-#bda-qem button {
+
+.navButtonActive-3RPAJy {
     background: #0e0e0e;
     border-left: none;
     box-shadow: none;
 }
   
-#bda-qem button:hover {
+.navButtonActive-3RPAJy:hover {
     background-color: #181818;
 }
 
-#bda-qem button.active {
+.navButtonActive-3RPAJy.active {
     background-color: #008c99 !important;
 }
 
 
-.emojiPicker-3m1S-j .header-1nkwgG {
+.emojiPicker-3PwZFl .header-8ilj5e {
     border: none;
     box-shadow: none;
 }
 
-.emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_,
-.emojiPicker-3m1S-j .category-2U57w6 {
+.emojiPicker-3PwZFl .header-8ilj5e .searchBar-2pWH0_,
+.categoryWrapper-UZ5YNj {
     background-color: transparent;
 }
 
-.emojiPicker-3m1S-j .stickyHeader-1SS0JU {
-    display: none;
-}
+
 
 .icon-3cZ1F_ {
     color: white;
 }
 
-.emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+.contentWrapper-2txmjs .diversitySelectorPopout-3FiGaM {
     background: rgba(0, 0, 0, 0.42);
     border-color: transparent;
 }
 
-.emojiPicker-3m1S-j .category-2U57w6 {
-    color: white;
-}
 
-.emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
+.categoryItemDefaultCategorySelected-_HCKoz, .categoryItemDefaultCategorySelected-_HCKoz:hover {
     border-bottom-color: black;
+    border-bottom-width: 3px;
+    border-style: solid;
+    background: none;
 }
 
-.emojiPicker-3m1S-j .categories-1feg4n {
+.wrapper-2N7X54 {
     background: none;
 }
 
