--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -1174,40 +1174,13 @@
 }
 
 /* Emotes */
-#bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, 
-#bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, 
-.bda-dark .emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb,
-.scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, 
-.theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb {
-	border-color: transparent!important;
-	background-color: rgba(255,255,255,.4)!important;
-}
 
-#bda-qem-favourite-container .scroller::-webkit-scrollbar, 
-#bda-qem-favourite-container .scroller::-webkit-scrollbar-track, 
-#bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, 
-#bda-qem-twitch-container .scroller::-webkit-scrollbar, 
-#bda-qem-twitch-container .scroller::-webkit-scrollbar-track, 
-#bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, 
-.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, 
-.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, 
-.emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
-	background-color: transparent!important;
-	border-color: transparent!important;
-}
 
-#bda-qem {
-	border-bottom: none!important;
-	background: transparent;
-}
-
-.infoBar-U6oBFk {
+.inspector-sdLnLS {
 	background: none;
 }
 
-.emojiPicker-3m1S-j,
-#bda-qem-favourite-container, 
-#bda-qem-twitch-container {
+.contentWrapper-2txmjs {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.626) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
@@ -1215,77 +1188,69 @@
 	border-radius:4px;
 }
 
-.emojiPicker-3m1S-j .categories-1feg4n {
+.wrapper-2N7X54 {
 	background: none;
 }
 
 
-#bda-qem button.active {
+.navButtonActive-3RPAJy.active {
 	background-color: rgba(204, 227, 246, 0.82) !important;
 	color: black;
 }
 
-#bda-qem button:hover {
+.navButtonActive-3RPAJy:hover {
 	background-color: rgba(204, 227, 246, 0.33);
 }
 
-#bda-qem button,
+.navButtonActive-3RPAJy,
 .emote-container:hover {
 	background: linear-gradient(5deg, transparent 62%, rgba(204, 227, 246, 0.626) 100%);
     border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
 	background-color: rgba(65, 95, 132, 0.776);
 }
-.emojiPicker-3m1S-j .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
+.contentWrapper-2txmjs .scroller-3vODG7 .emojiItem-109bjA.selected-39BZ4S {
 	background-color: rgba(65, 95, 132, 0.776);
 	border: 2px solid rgba(204, 227, 246, 0.468);
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.557);
 }
 
-#bda-qem button {
+.navButtonActive-3RPAJy {
 	border-left: none;
 }
 
-#bda-qem-twitch {
-	border-radius: 15px 0 0 0;
-}
-
-#bda-qem-emojis {
-	border-radius: 0 15px 0 0;
-}
 
 
 
-.emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+.contentWrapper-2txmjs .diversitySelectorPopout-3FiGaM {
 	background: rgba(0, 0, 0, 0.52);
 	border-color: transparent;
 }
 
-.diversitySelector-tmmMv0 .popout-2nUePc .item-16cXuq:hover {
+.diversityEmojiItem-L6_IXw:hover {
 	background-color: rgba(245, 245, 245, 0.16);
 }
 
-.emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_ {
+.emojiPicker-3PwZFl .header-8ilj5e .searchBar-2pWH0_ {
 	background-color: rgba(0, 0, 0, 0.42);
 }
 
-.emojiPicker-3m1S-j .header-1nkwgG {
+.emojiPicker-3PwZFl .header-8ilj5e {
 	border: none;
 	box-shadow: none;
 }
 
-.emojiPicker-3m1S-j .category-2U57w6 {
+.categoryWrapper-UZ5YNj {
 	background-color: rgba(0, 0, 0, 0.62);
-	color: white;
-	text-align: center;
 }
 
-.emojiPicker-3m1S-j .stickyHeader-1SS0JU {
-	display: none;
-}
 
-.emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
+
+.categoryItemDefaultCategorySelected-_HCKoz, .categoryItemDefaultCategorySelected-_HCKoz:hover {
 	border-bottom-color: black;
+	border-bottom-width: 3px;
+  border-style: solid;
+  background: none;
 }
 /* ---- */
 
