--- a/My_Theme_Collection/TeamRam.theme.css
+++ b/My_Theme_Collection/TeamRam.theme.css
@@ -2078,81 +2078,64 @@
 }
 
 /* Emote Section */
-#bda-qem {
-    border-bottom: none!important;
-    background: transparent;
-}
 
-#bda-qem button {
+.navButtonActive-3RPAJy {
     background: rgba(0, 0, 0, 0.79);
     border-left: none;
     box-shadow: none;
 }
 
-.emojiPicker-3m1S-j .categories-1feg4n {
+.wrapper-2N7X54 {
     background: none;
 }
 
 
-#bda-qem button:hover {
+.navButtonActive-3RPAJy:hover {
     background-color: #f4acc5;
 }
 
-#bda-qem button.active {
+.navButtonActive-3RPAJy.active {
     background-color: #f4acc5 !important;
     border: 2px solid rgba(255, 255, 255, 0.15);
 }
 
-.emojiPicker-3m1S-j,
-#bda-qem-favourite-container, 
-#bda-qem-twitch-container {
+.contentWrapper-2txmjs {
     background: linear-gradient(135deg, #f4acc5 0%, #000000 100%);
 }
 
-.infoBar-U6oBFk {
+.inspector-sdLnLS {
     background: none;
 }
 
 
-.emojiPicker-3m1S-j .header-1nkwgG {
+.emojiPicker-3PwZFl .header-8ilj5e {
     border: none;
     box-shadow: none;
 }
 
-.emojiPicker-3m1S-j .header-1nkwgG .searchBar-2pWH0_ {
+.emojiPicker-3PwZFl .header-8ilj5e .searchBar-2pWH0_ {
     background-color: transparent;
 }
 
-.emojiPicker-3m1S-j .diversitySelector-tmmMv0 .popout-2nUePc {
+.contentWrapper-2txmjs .diversitySelectorPopout-3FiGaM {
     background: transparent;
     border-color: transparent;
 }
 
-.emojiPicker-3m1S-j .category-2U57w6 {
+.categoryWrapper-UZ5YNj {
     background-color: transparent;
-    color: white;
-    text-align: center;
-    font-weight: bold;
 }
 
-.emojiPicker-3m1S-j .stickyHeader-1SS0JU {
-    display: none;
-}
 
-#bda-qem-favourite-container .scroller::-webkit-scrollbar, #bda-qem-favourite-container .scroller::-webkit-scrollbar-track, #bda-qem-favourite-container .scroller::-webkit-scrollbar-track-piece, #bda-qem-twitch-container .scroller::-webkit-scrollbar, #bda-qem-twitch-container .scroller::-webkit-scrollbar-track, #bda-qem-twitch-container .scroller::-webkit-scrollbar-track-piece, .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
-    background-color: transparent!important;
-    border-color: transparent!important;
-}
 
-.emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
+
+.categoryItemDefaultCategorySelected-_HCKoz, .categoryItemDefaultCategorySelected-_HCKoz:hover {
     border-bottom-color: white;
+    border-bottom-width: 3px;
+    border-style: solid;
+    background: none;
 }
 
-#bda-qem-twitch-container .scroller::-webkit-scrollbar-thumb, #bda-qem-favourite-container .scroller::-webkit-scrollbar-thumb, .bda-dark .emojiPicker-3g68GS .scroller-3vODG7::-webkit-scrollbar-thumb {
-    background: black !important;
-    border: none;
-    border-radius: 4px;
-}
 /* -- */
 
 /* Fills Whole Icon */
